Extermination of many warnings