@@ -11,6 +11,7 @@ import org.mockito.Mockito;
 
 import java.awt.*;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -32,9 +33,9 @@ class TransitMapViewModelTest {
     @Test
     void testPresent() {
         Graphics2D graphics = mock(Graphics2D.class);
-        StationDTO station = new StationDTO("Station A", Arrays.asList(1), 1000, 1000); // Corrected here
-        when(stationInteractor.getStations()).thenReturn(Arrays.asList(station));
-        when(trainInteractor.getTrains()).thenReturn(Arrays.asList());
+        StationDTO station = new StationDTO("Station A", List.of(1), 1000, 1000); // Corrected here
+        when(stationInteractor.getStations()).thenReturn(List.of(station));
+        when(trainInteractor.getTrains()).thenReturn(List.of());
         viewModel.present(graphics, 1920, 1080);
         verify(stationInteractor, times(1)).getStations();
         verify(trainInteractor, times(1)).getTrains();
@@ -44,8 +45,8 @@ class TransitMapViewModelTest {
 // matt pls help fix this test
     @Test
     void testGetArrivalsWithStation() {
-        StationDTO station = new StationDTO("Station A", Arrays.asList(1), 1000, 1000); // Corrected here
-        when(stationInteractor.getStations()).thenReturn(Arrays.asList(station));
+        StationDTO station = new StationDTO("Station A", List.of(1), 1000, 1000); // Corrected here
+        when(stationInteractor.getStations()).thenReturn(List.of(station));
         viewModel.present(mock(Graphics2D.class), 1920, 1080); // Ensure the stations list is populated
         Optional<ArrivalsViewModel> viewModelOptional = viewModel.getArrivals(1000, 1000); // Using the known station's position
         assertTrue(viewModelOptional.isPresent());
@@ -54,8 +55,8 @@ class TransitMapViewModelTest {
 
     @Test
     void testGetArrivalsWithoutStation() {
-        StationDTO station = new StationDTO("Station A", Arrays.asList(1), 1000, 1000); // Corrected instantiation
-        when(stationInteractor.getStations()).thenReturn(Arrays.asList(station));
+        StationDTO station = new StationDTO("Station A", List.of(1), 1000, 1000); // Corrected instantiation
+        when(stationInteractor.getStations()).thenReturn(List.of(station));
         viewModel.present(mock(Graphics2D.class), 1920, 1080); // Ensure the stations list is populated
         Optional<ArrivalsViewModel> viewModelOptional = viewModel.getArrivals(1500, 1500); // Using a random position
         assertFalse(viewModelOptional.isPresent());
@@ -64,8 +65,8 @@ class TransitMapViewModelTest {
 
     @Test
     void testOnMouseMoveWithHighlighting() {
-        StationDTO station = new StationDTO("Station A", Arrays.asList(1), 1000, 1000); // Corrected instantiation
-        when(stationInteractor.getStations()).thenReturn(Arrays.asList(station));
+        StationDTO station = new StationDTO("Station A", List.of(1), 1000, 1000); // Corrected instantiation
+        when(stationInteractor.getStations()).thenReturn(List.of(station));
         viewModel.present(mock(Graphics2D.class), 1920, 1080); // Ensure the stations list is populated
         viewModel.onMouseMove(1000, 1000); // Using the known station's position
         // An internal state is changed. For it to be validated, a method exposing the internal state would be needed.
@@ -74,8 +75,8 @@ class TransitMapViewModelTest {
 
     @Test
     void testOnMouseMoveWithoutHighlighting() {
-        StationDTO station = new StationDTO("Station A", Arrays.asList(1), 1000, 1000); // Corrected instantiation
-        when(stationInteractor.getStations()).thenReturn(Arrays.asList(station));
+        StationDTO station = new StationDTO("Station A", List.of(1), 1000, 1000); // Corrected instantiation
+        when(stationInteractor.getStations()).thenReturn(List.of(station));
         viewModel.present(mock(Graphics2D.class), 1920, 1080); // Ensure the stations list is populated
         viewModel.onMouseMove(1500, 1500); // Using a random position
         // An internal state is changed. For it to be validated, a method exposing the internal state would be needed.
